--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devcomm-site",
-  "homepage": "https://thecoder-ashish.github.io/portfolio",
+  "homepage": "http://thecoder-ashish.github.io/Portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
